# pycma

./: .gitignore  LICENSE  README.md  appveyor.yml  cma_signals.in  pyproject.toml  setup-howto.py  setup.py
.circleci/: config.yml
.github/workflows/: python-package.yml
cma/: LICENSE  __init__.py  bbobbenchmarks.py  boundary_handler.py  constraints_handler.py  evolution_strategy.py  fitness_functions.py  fitness_models.py  fitness_transformations.py  integer_centering.py  interfaces.py  logger.py  optimization_tools.py  options_parameters.py  purecma.py  recombination_weights.py  restricted_gaussian_sampler.py  s.py  sampler.py  sigma_adaptation.py  test.py  transformations.py  wrapper.py
cma/dev/: feigh.py  optionparser.py  vks_sampler.py
cma/dev/feigh_src/: effeig.f90  pyeffeig.py
cma/utilities/: __init__.py  math.py  python3for2.py  utils.py
notebooks/: notebook-usecases-basics.ipynb  notebook-usecases-constraints.ipynb  notebook-usecases-noise.ipynb
tools/conda.recipe/: conda_build_config.yaml  meta.yaml  run_test.sh
